# AntMedia-Gstreamer-Webrtc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  P2P_AMS.c  readme.md  sendRecvAnt  sendRecvAnt.c
Debug_logs/: pipeline.dot
libs/: build.sh  win64_librws.lib
